feat: qrcode, responsive, allow upload from camera, download report
