# src/resources/backend-openapi.yaml
@@ -8,6 +8,25 @@ info:
   contact:
     name: IBM Corp. and LoopBack contributors
 paths:
+  /authenticate-signup:
+    post:
+      x-controller-name: UserController
+      x-operation-name: authenticateSignUp
+      tags:
+        - UserController
+      responses:
+        '200':
+          description: User
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewUser'
+      operationId: UserController.authenticateSignUp
   /cases/count:
     get:
       x-controller-name: CaseController
@@ -265,8 +284,24 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewScans'
+              type: array
       operationId: ScanController.createAllScans
+  /export/users-emails:
+    get:
+      x-controller-name: UserController
+      x-operation-name: exportDoctorsEmails
+      tags:
+        - UserController
+      responses:
+        '200':
+          description: Export doctor emails
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+      operationId: UserController.exportDoctorsEmails
   /messages/count:
     get:
       x-controller-name: MessagesController
@@ -1414,7 +1449,7 @@ paths:
                 type: string
       operationId: UserController.whoAmI
 servers:
-  - url: https://vertex-be.onrender.com
+  - url: http://localhost:3000
 components:
   schemas:
     User:
